fix #1302 - wrong card header in dark mode

--- a/src/scss/ui/_cards.scss
+++ b/src/scss/ui/_cards.scss
@@ -213,7 +213,7 @@
 
 .card-header-light {
   border-bottom-color: transparent;
-  background: var(--#{$prefix}light);
+  background: var(--#{$prefix}bg-surface-secondary);
 }
 
 .card-header-tabs {
